--- a/src/app/currencies-panel/currencies-panel.component.css
+++ b/src/app/currencies-panel/currencies-panel.component.css
@@ -3,28 +3,12 @@
   margin-right: 2em;
 }
 
-.form {
-  width: 40%;
-  padding: 1em;
-}
-
-[type="text"],
-[type="submit"] {
+[type="text"] {
   display: block;
-  margin-bottom: 1em;
-  width: 90%;
+  padding: 1em;
+  margin: 0 1em 1em 0;
+  width: 35%;
+  height: 3em;
   margin-left: auto;
   margin-right: auto;
-  height: 3em;
 }
-
-[type="submit"] {
-  background-color: var(--secondary-color);
-  border: none;
-  color: #fff;
-  cursor: pointer;
-  transition: all 200ms ease;
-}
-
-[type="submit"]:hover { background-color: var(--main-color-light); }
-[type="text"] { text-align: center; }
