--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 * {
   margin: 0;
   padding: 0;
@@ -16,7 +15,4 @@
 
 .lato { font-family: 'Lato', sans-serif; }
 .open-sans { font-family: 'Open Sans', sans-serif; }
-
-.body {
-  background-color: var(--background);
-}
+.body { background-color: var(--background); }
