--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,6 @@
 <header class="header">
-  <h1 class="title lato">Cryptocurrencies</h1>
+  <a routerLink="">
+    <h1 class="title lato">Cryptocurrencies</h1>
+  </a>
+
 </header>
