--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!-- Hola ratas -->
+<!-- Hola -->
 <app-header></app-header>
-<app-currencies-panel></app-currencies-panel>
+<router-outlet></router-outlet>
