--- a/src/app/currencies-list/currencies-list.component.css
+++ b/src/app/currencies-list/currencies-list.component.css
@@ -1,14 +1,21 @@
 table {
-  width: 100%;
+  width: 60%;
+  margin: 0 auto;
+  box-shadow: 0 1px 10px 1px black;
   border-collapse: collapse;
+  padding: 5px;
+  background-color: white;
 }
 
 th {
   background-color: #348367;
+  background-image: url('https://png.pngtree.com/thumb_back/fw800/back_pic/04/01/21/3958008dcee693b.jpg');
   color: #fff;
-  border: 1px solid #56515D;
+  text-shadow: 2px 0 5px black, 2px 0 5px black, 2px 0 5px black, 2px 0 5px black;
+  border: 1.5px solid darkslategrey;
   padding: 0.5em;
-  text-align: left;
+  text-align: center;
+  font-size: 20px;
 }
 
 td {
