--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,30 @@
   box-sizing: border-box;
 }
 
+a:link {
+  color: darkcyan;
+}
+
+/* visited link */
+a:visited {
+  color: green;
+}
+
+/* mouse over link */
+a:hover {
+  color: greenyellow;
+}
+
+/* selected link */
+a:active {
+  color: greenyellow;
+}
+
+
+html {
+  background-image: url('https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-037.jpg');
+}
+
 :root {
   --main-color: #21482F;
   --secondary-color: #348367;
