--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ a:active {
 
 
 html {
-  background-image: url('https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-037.jpg');
+  background-image: url('https://www.emt.ae/wp-content/uploads/2015/12/geometic-bg-white-2.jpg');
 }
 
 :root {
